[package]
name = "bevy_mod_scripting_qcvm"
version = "0.1.0"
edition = "2024"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = ["crates/qcvm"]

[workspace.package]
authors = ["Eira Fransham <eira.fransham@gmail.com>"]
# Needs to be licensed under GPL to be compatible with Quake 1's license.
license = "GPL-2.0"
homepage = "https://github.com/eira-fransham/bevy_mod_scripting_qcvm"
repository = "https://github.com/eira-fransham/bevy_mod_scripting_qcvm"

[workspace.dependencies]
anyhow = "1.0"
arc-slice = "0.1" 
arrayvec = "0.7"
bimap = "0.6"
bitflags = "2.10"
bump-scope = "1.4"
byteorder = "1.5"
hash32 = "1.0"
hashbrown = "0.16"
gxhash = "3.5"
glam = "^0.30"
indexmap = "2.11"
itertools = "0.14"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
snafu = "0.8"
strum = "0.27" 
tracing = "^0.1"

bevy_reflect = "0.18"

[dependencies]
qcvm = { path = "crates/qcvm" }

bevy_ecs = "0.18"
bevy_asset = "0.18"
bevy_app = "0.18"
bevy_log = "0.18"
bevy_math = "0.18"
bevy_platform = "0.18"

# Pending update to 0.17
bevy_mod_scripting_core = "0.19"
bevy_mod_scripting_script = "0.19"
bevy_mod_scripting_display = "0.19"
bevy_mod_scripting_bindings = "0.19"
bevy_mod_scripting_asset = "0.19"
