[package]
name = "qcvm"
version = "0.3.0"
edition = "2024"
description = "A QuakeC runtime designed to be embedded"
readme = "README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
arc-slice = { workspace = true, features = ["default-layout-any-buffer"] }
arrayvec.workspace = true
bimap.workspace = true
bitflags.workspace = true
bump-scope.workspace = true
byteorder.workspace = true
hash32.workspace = true
hashbrown.workspace = true
glam.workspace = true
indexmap.workspace = true
itertools.workspace = true
num.workspace = true
num-traits.workspace = true
num-derive.workspace = true
snafu.workspace = true
strum = { workspace = true, features = ["derive"] }
tracing.workspace = true

bevy_reflect = { workspace = true, optional = true }

[features]
default = []
reflect = ["dep:bevy_reflect"]
quake1 = []
